packages/nemo-parser/tests/type_errors/arg_count_mismatch.nemo

fn func(x : i32) : i32 = {
  x
}

fn main() : i32 = {
  func(1, 2, 3)
}
